--- a/site-dist/index.html
+++ b/site-dist/index.html
@@ -14,10 +14,10 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     
-    <script type="module" crossorigin src="/site-dist/assets/main.3b355465.js"></script>
-    <link rel="modulepreload" href="/site-dist/assets/vue-libs.bd45fd12.js">
-    <link rel="modulepreload" href="/site-dist/assets/iframe-router.835317b7.js">
-    <link rel="stylesheet" href="/site-dist/assets/main.d06dd8fb.css">
+    <script type="module" crossorigin src="/TDesign/site-dist/assets/main.01ef9078.js"></script>
+    <link rel="modulepreload" href="/TDesign/site-dist/assets/vue-libs.bd45fd12.js">
+    <link rel="modulepreload" href="/TDesign/site-dist/assets/iframe-router.3b1e90f8.js">
+    <link rel="stylesheet" href="/TDesign/site-dist/assets/main.d06dd8fb.css">
   </head>
   <body ontouchstart>
     <div id="app"></div>
